--- a/partners.html
+++ b/partners.html
@@ -34,7 +34,7 @@
 
     <section id="partners">
       <h2>Partners</h2>
-      <div class="partner-logos">
+      <div class="images">
         <img src="assets/logos/eurac_logo.png" alt="Eurac Research" class="partnerlogo" />
       </div>
       <p>
@@ -43,7 +43,7 @@
         coordinating project management, stakeholder engagement, development of openEO, and the application scenarios. <br>
       </p>
       
-      <div class="partner-logos">
+      <div class="images">
         <img src="assets/logos/unibz_logo.png" alt="Free University of Bozen-Bolzano" class="partnerlogo" />
       </div>
       <p>
@@ -52,7 +52,7 @@
         leads the development of semantic models and the integration of openEO with the Virtual Knowledge Graph. <br>
       </p>  
       
-      <div class="partner-logos">
+      <div class="images">
         <img src="assets/logos/ontopic_logo.png" alt="Ontopic" class="partnerlogo" />
       </div>    
       <p>
