--- a/timeline.html
+++ b/timeline.html
@@ -34,7 +34,7 @@
 
     <section id="timeline">
       <h2>Timeline and Milestones</h2>
-      <p>The official kick-off meeting for CRIMA took place at Eurac Research HQ in Bolzano on Febraury 20th, 2025.</p>
+      <p><strong>Project Duration</strong>: January 2025 - January 2028</p>
       <p><br>The project spans 36 months and includes the following milestones:</p>
       <div class="images">
         <img src="assets/crima_timeline.png" alt="Workflow Diagram" class="diagram" />
