--- a/news.html
+++ b/news.html
@@ -43,7 +43,7 @@
 
   <main>
     <section id="news">
-      <h2>Project Kick-off | February 20, 2025</h2>
+      <h2><strong>February 20, 2025</strong> | Project Kick-off</h2>
 
       <div class="images">
         <img src="assets/crima_kickoff.png" alt="CRIMA Kick-off" class="diagram" />
