--- a/news.html
+++ b/news.html
@@ -43,13 +43,13 @@
 
   <main>
     <section id="news">
-      <h2><strong>February 20, 2025</strong> | Project Kick-off</h2>
-
+      <h2>February 20, 2025</h2>
+      <h3><strong>Project Kick-off</strong></h3>
       <div class="images">
         <img src="assets/crima_kickoff.png" alt="CRIMA Kick-off" class="diagram" />
       </div>
       
-      <p>The CRIMA project officialy kicked off at Eurac Research HQ in Bolzano in February 2025, where all project partners gathered to present and discuss their plans for the next 3 years. </p>      
+      <p>The CRIMA project officially kicked off at Eurac Research HQ in Bolzano in February 2025, where all project partners gathered to present and discuss their plans for the next 3 years. </p>      
 
     </section>
   </main>
