--- a/partners.html
+++ b/partners.html
@@ -42,12 +42,15 @@
         <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a>, 
         coordinating project management, stakeholder engagement, development of openEO, and the application scenarios. <br>
       </p>
+      <p>The consortium includes two research groups (the Advanced Computing for Earth Observation Research Group and the Climate
+         and Disaster Risk Research Group).
+      </p>
       
       <div class="images">
         <img src="assets/logos/unibz_logo.png" alt="Free University of Bozen-Bolzano" class="partnerlogo" />
       </div>
       <p>
-        The 
+        The KRDB Research Centre for Knowledge and Data of the
         <a href="https://www.unibz.it/" target="_blank">Free University of Bozen-Bolzano</a> 
         leads the development of semantic models and the integration of openEO with the Virtual Knowledge Graph. <br>
       </p>  
@@ -56,7 +59,7 @@
         <img src="assets/logos/ontopic_logo.png" alt="Ontopic" class="partnerlogo" />
       </div>    
       <p>
-        <a href="https://www.ontopic.ai/" target="_blank">Ontopic</a> 
+        <a href="https://www.ontopic.ai/" target="_blank">Ontopic</a>, a local company in Bolzano, 
         is responsible for implementing natural language and LLM-based interfaces for querying the system.<br>
       </p>
 
