--- a/objectives.html
+++ b/objectives.html
@@ -63,7 +63,17 @@
     <section>
       <h2>Synergies</h2>
       <p>
-        CRIMA supports climate resilience planning and sustainable development in the Alpine region, with strong relevance to global policy frameworks. It directly contributes to several <strong>United Nations Sustainable Development Goals (SDGs)</strong>:
+        CRIMA supports climate resilience planning and sustainable development, with strong relevance to global policy frameworks.
+      </p>
+      <p>
+        These activities of CRIMA are consistent with provincial-level strategies, where they will
+        contribute to informing the <strong>climate change adaptation plan of the Province of Bolzano</strong>, as well as at the regional level where they
+        will integrate the <strong>EUSALP strategy for the Alpine region</strong>, in which Eurac currently coordinates action group 4 (Risk Governance).
+      </p>
+      <p>
+        Within the framework of the <strong>17 Sustainable Development Goals (SDGs) of the United Nations</strong>, South Tyrol has highlighted 7
+        priority action areas, outlining the roadmap on which the regional sustainable development strategy is based.
+        CRIMA directly contributes to several of these SDGs:
       </p>
       
       <div class="images">
