--- a/partners.html
+++ b/partners.html
@@ -39,11 +39,9 @@
       </div>
       <p>
         The CRIMA project is led by 
-        <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a>, 
+        <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a>, and involves two research groups: the Advanced Computing for Earth Observation Research Group and the Climate
+         and Disaster Risk Research Group. These teams at Eurac are responsible for 
         coordinating project management, stakeholder engagement, development of openEO, and the application scenarios. <br>
-      </p>
-      <p>The consortium includes two research groups (the Advanced Computing for Earth Observation Research Group and the Climate
-         and Disaster Risk Research Group).
       </p>
       
       <div class="images">
