--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <!-- Red top bar with nav -->
   <div class="main-header">
 <!--     <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" /> -->
-    <nav>
+<!--     <nav> -->
+    <button class="burger" aria-label="Toggle menu">☰ Menu</button>
+    <nav class="nav-list">
       <a href="index.html">About</a>
       <a href="objectives.html">Objectives</a>
       <a href="methodology.html">Methodology</a>
