--- a/objectives.html
+++ b/objectives.html
@@ -19,7 +19,8 @@
   <!-- Red top bar with nav -->
   <div class="main-header">
 <!--     <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" /> -->
-    <nav>
+    <button class="burger" aria-label="Toggle menu">☰ Menu</button>
+    <nav class="nav-list">
       <a href="index.html">About</a>
       <a href="objectives.html">Objectives</a>
       <a href="methodology.html">Methodology</a>
@@ -107,5 +108,7 @@
     <p>&copy; 2025 <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a></p>
   </footer>
 
+<script src="script.js"></script>
+  
 </body>
 </html>
