--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a></p>
+    <p class="footer-credit">Website created by Sahba El-Shawa</p>
   </footer>
 
 <script src="script.js"></script>
