--- a/objectives.html
+++ b/objectives.html
@@ -106,6 +106,7 @@
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a></p>
+    <p class="footer-credit">Website created by <a href="mailto:sahba.elshawa@eurac.edu">Sahba El-Shawa</a></p>
   </footer>
 
 <script src="script.js"></script>
