--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 <body>
 
   <!-- White background logo section -->
-  <div class="logo-header">
-<!--     <div class="logo-box">
-      <img src="crima_logo_full_white.png" alt="CRIMA logo" class="logo" />
-    </div> -->
-  </div>
-
+  <a href="index.html" class="banner-link">
+    <div class="logo-header"></div>
+  </a>
+      
   <!-- Red top bar with nav -->
   <div class="main-header">
 <!--     <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" /> -->
