Update objectives.html update banner link

--- a/objectives.html
+++ b/objectives.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!-- White background logo section -->
+  <!-- Banner header clickable for index page -->
   <a href="index.html" class="banner-link">
     <div class="logo-header"></div>
   </a>
