Update methodology.html update banner link

--- a/methodology.html
+++ b/methodology.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 
-  <!-- White background logo section -->
-  <div class="logo-header">
-<!--     <div class="logo-box">
-      <img src="crima_logo_full_white.png" alt="CRIMA logo" class="logo" />
-    </div> -->
-  </div>
+  
+  <!-- Banner header clickable for index page -->
+  <a href="index.html" class="banner-link">
+    <div class="logo-header"></div>
+  </a>
+      
 
   <!-- Red top bar with nav -->
   <div class="main-header">
