Clean up timeline.html

--- a/timeline.html
+++ b/timeline.html
@@ -1,3 +1,11 @@
+<!--
+  File: timeline.html
+  Description: This page describes the timeline and major milestones of CRIMA.
+  Author: Sahba El-Shawa
+  Organization: Eurac Research
+  Last updated: July 2025
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,15 +17,13 @@
 </head>
 <body>
 
-  <!-- White background logo section -->
+  <!-- Banner header clickable for index page -->
   <a href="index.html" class="banner-link">
     <div class="logo-header"></div>
   </a>
-      
-
-  <!-- Red top bar with nav -->
+          
+  <!-- Navigation bar showing pages - resizes automatically to menu button on small screens -->
   <div class="main-header">
-<!--     <img src="crima_logo_simple.png" alt="CRIMA logo" height="30" /> -->
     <button class="burger" aria-label="Toggle menu">☰ Menu</button>
     <nav class="nav-list">
       <a href="index.html">About</a>
@@ -26,12 +32,12 @@
       <a href="timeline.html">Timeline</a>
       <a href="partners.html">Partners</a>
       <a href="news.html">News</a> 
-<!--       <a href="#funding">Funding</a> -->
     </nav>
   </div>
 
   <main>
 
+    <!-- Timeline section - describes project milestones and duration -->
     <section id="timeline">
       <h2>Timeline and Milestones</h2>
       <p><strong>Project Duration</strong>: January 2025 - January 2028</p>
@@ -50,12 +56,15 @@
 
   </main>
 
-  <!-- Footer -->
+
+  <!-- Footer - copyright statement and credit -->
   <footer>
     <p>&copy; 2025 <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a></p>
     <p class="footer-credit">Website created by <a href="mailto:sahba.elshawa@eurac.edu">Sahba El-Shawa</a></p>
   </footer>
 
+
+<!-- Javascript to enable menu toggle on small screens -->
 <script src="script.js"></script>
   
 </body>
