Update news.html add more info

--- a/news.html
+++ b/news.html
@@ -44,9 +44,10 @@
       <div class="images">
         <img src="assets/crima_kickoff.png" alt="CRIMA Kick-off" class="diagram" />
       </div>
-      
-      <p>The CRIMA project officially kicked off at Eurac Research HQ in Bolzano in February 2025, where all project partners gathered to present and discuss their plans for the next 3 years. </p>      
-
+     
+      <p>The CRIMA project officially kicked off at Eurac Research HQ in Bolzano, bringing together representatives from all partner institutions. The launch meeting marked the beginning of a three-year collaboration to advance climate risk assessment by integrating AI, semantic technologies, and Earth Observation data.</p>
+  
+      <p>During the meeting, partners aligned on technical goals, discussed system architecture, and defined a roadmap for development. Over the next two years, the team will focus on building and refining the system, which will then be validated through two use cases addressing climate risks in the Alpine region.</p>
     </section>
   </main>
 
