--- a/objectives.html
+++ b/objectives.html
@@ -14,6 +14,7 @@
   <title>CRIMA – Evidence-based Management of Climate Risks</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet" />
+  <link rel="icon" href="assets/crima_icon.png" type="image/png">
 </head>
 <body>
 
