Update objectives.html fix text

--- a/objectives.html
+++ b/objectives.html
@@ -44,7 +44,7 @@
         CRIMA aims to create an integrated digital framework to enhance the usability and accessibility of complex climate knowledge through the development of a <strong>Virtual Knowledge Graph (VKG)</strong>. This VKG will interlink expert knowledge, Earth Observation (EO) data, and scientific literature using <strong>semantic web technologies</strong>, enabling a deeper understanding of climate risks and their cascading impacts.
       </p>
       <p>
-        The project leverages innovative conceptual models—such as <strong>impact chains</strong>—to represent the causal pathways between climate hazards, exposure, vulnerabilities, and adaptation measures. These models act as a bridge between human expertise and computational reasoning, helping structure how risks are understood, analyzed, and addressed.
+        The project leverages innovative conceptual models, such as <strong>impact chains</strong>, to represent the causal pathways between climate hazards, exposure, vulnerabilities, and adaptation measures. These models act as a bridge between human expertise and computational reasoning, helping structure how risks are understood, analyzed, and addressed.
       </p>
       <p>
         A key objective is to <strong>enable AI-assisted querying and analysis</strong> of Big Earth Data. By combining SPARQL endpoints with <strong>Natural Language Processing (NLP)</strong> and large language models (LLMs), CRIMA will offer user-friendly interfaces that democratize access to complex climate data and knowledge. This includes both <em>structured querying</em> for technical users and <em>natural language querying</em> for non-technical stakeholders.
