Update partners.html fix spacing

--- a/partners.html
+++ b/partners.html
@@ -48,7 +48,7 @@
         The CRIMA project is led by 
         <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a>, and involves two research groups: the Advanced Computing for Earth Observation Research Group and the Climate
          and Disaster Risk Research Group. These teams at Eurac are responsible for 
-        coordinating project management, stakeholder engagement, development of openEO, and the application scenarios. <br>
+        coordinating project management, stakeholder engagement, development of openEO, and the application scenarios. <br><br>
       </p>
       
       <div class="images">
@@ -57,7 +57,7 @@
       <p>
         The KRDB Research Centre for Knowledge and Data of the
         <a href="https://www.unibz.it/" target="_blank">Free University of Bozen-Bolzano</a> 
-        leads the development of semantic models and the integration of openEO with the Virtual Knowledge Graph. <br>
+        leads the development of semantic models and the integration of openEO with the Virtual Knowledge Graph. <br><br>
       </p>  
       
       <div class="images">
