--- a/timeline.html
+++ b/timeline.html
@@ -60,7 +60,7 @@
 
   <!-- Footer - copyright statement and credit -->
   <footer>
-    <p>&copy; 2025 <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a></p>
+    <p>&copy; 2025 <a href="https://www.eurac.edu/" target="_blank">Eurac Research</a> | <a href="https://www.eurac.edu/en/static/privacy-policy-website" target="_blank">Privacy Policy</a> </p>
     <p class="footer-credit">Website created by <a href="mailto:sahba.elshawa@eurac.edu">Sahba El-Shawa</a></p>
   </footer>
 
